--- a/SolivtareCore/SolivtaireCore.csproj
+++ b/SolivtareCore/SolivtaireCore.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Solitare\" />
+    <Folder Include="Deck\" />
   </ItemGroup>
 
 </Project>
