--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -18,7 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SolivtareCore\SolivtareCore.csproj" />
+    <ProjectReference Include="..\SolivtaireCore\SolivtaireCore.csproj" />
+    <ProjectReference Include="..\SolivtareCore\SolivtaireCore.csproj" />
   </ItemGroup>
 
   <ItemGroup>
