--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SolivtaireCore\SolvitaireCore.csproj" />
+    <ProjectReference Include="..\SolvitaireCore\SolvitaireCore.csproj" />
   </ItemGroup>
 
   <ItemGroup>
