Evaluation and Visual representation tweaks

--- a/SolvitaireCMD/Properties/launchSettings.json
+++ b/SolvitaireCMD/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "SolvitaireCMD": {
-      "commandName": "Project",
-      "commandLineArgs": "60"
+      "commandName": "Project"
     }
   }
 }
