--- a/SolvitaireCore/SolvitaireCore.csproj
+++ b/SolvitaireCore/SolvitaireCore.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.4" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.4" />
+    <PackageReference Include="Microsoft.Extensions.ObjectPool" Version="9.0.4" />
   </ItemGroup>
 
 </Project>
