--- a/SolvitaireGenetics/Properties/launchSettings.json
+++ b/SolvitaireGenetics/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "SolvitaireGenetics": {
       "commandName": "Project",
-      "commandLineArgs": "-o \"A:\\Projects and Original Works\\Solvitaire\\Genetics\" -p 16 -g 20 -t 4 -c 20000 -l 10"
+      "commandLineArgs": "-o \"A:\\Projects and Original Works\\Solvitaire\\Genetics\" -p 320 -g 1000 -t 16 -c 20000 -l 20 -m 0.1 "
     }
   }
 }
