--- a/SolvitaireGenetics/SolvitaireGenetics.csproj
+++ b/SolvitaireGenetics/SolvitaireGenetics.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
+    <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.4" />
     <PackageReference Include="Serilog.Extensions.Logging.File" Version="3.0.0" />
