Broke out IO project and moved deck serialization there.

--- a/SolvitaireGenetics/SolvitaireGenetics.csproj
+++ b/SolvitaireGenetics/SolvitaireGenetics.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SolvitaireCore\SolvitaireCore.csproj" />
+    <ProjectReference Include="..\SolvitaireIO\SolvitaireIO.csproj" />
   </ItemGroup>
 
 </Project>
