Removed GUI Functions

--- a/SolvitaireGuiFunctions/SolvitaireGuiFunctions.csproj
+++ b/SolvitaireGuiFunctions/SolvitaireGuiFunctions.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\SolvitaireCore\SolvitaireCore.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Util\" />
+  </ItemGroup>
+
 </Project>
