--- a/SolvitaireGUI/SolvitaireGUI.csproj
+++ b/SolvitaireGUI/SolvitaireGUI.csproj
@@ -67,6 +67,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SolvitaireCore\SolvitaireCore.csproj" />
+    <ProjectReference Include="..\SolvitaireGenetics\SolvitaireGenetics.csproj" />
+    <ProjectReference Include="..\SolvitaireIO\SolvitaireIO.csproj" />
   </ItemGroup>
 
   <ItemGroup>
