--- a/SolvitaireIO/SolvitaireIO.csproj
+++ b/SolvitaireIO/SolvitaireIO.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\SolvitaireCore\SolvitaireCore.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Converters\" />
+  </ItemGroup>
+
 </Project>
