--- a/SolvitairePlotting/SolvitairePlotting.csproj
+++ b/SolvitairePlotting/SolvitairePlotting.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="OxyPlot.Core" Version="2.2.0" />
+    <PackageReference Include="ScottPlot" Version="5.0.55" />
   </ItemGroup>
 
   <ItemGroup>
