--- a/SolvitaireCore/SolvitaireCore.csproj
+++ b/SolvitaireCore/SolvitaireCore.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.ObjectPool" Version="9.0.4" />
   </ItemGroup>
 
