Basics for Connect Four Game

--- a/SolvitaireGenetics/SolvitaireGenetics.csproj
+++ b/SolvitaireGenetics/SolvitaireGenetics.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\SolvitaireIO\SolvitaireIO.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="NewFolder\" />
+  </ItemGroup>
+
 </Project>
