--- a/SolvitaireGUI/SolvitaireGUI.csproj
+++ b/SolvitaireGUI/SolvitaireGUI.csproj
@@ -63,6 +63,7 @@
     <None Remove="Resources\Cards\QD.png" />
     <None Remove="Resources\Cards\QH.png" />
     <None Remove="Resources\Cards\QS.png" />
+    <None Remove="Resources\Icons\ApplicationIcon.png" />
     <None Remove="Resources\Icons\gauntlet.png" />
     <None Remove="Resources\Icons\snap.png" />
   </ItemGroup>
@@ -135,6 +136,7 @@
     <Resource Include="Resources\Cards\QD.png" />
     <Resource Include="Resources\Cards\QH.png" />
     <Resource Include="Resources\Cards\QS.png" />
+    <Resource Include="Resources\Icons\ApplicationIcon.png" />
     <Resource Include="Resources\Icons\gauntlet.png" />
     <Resource Include="Resources\Icons\snap.png" />
   </ItemGroup>
