Play Games is now its own tab with high level dependency injection

--- a/SolvitaireGUI/SolvitaireGUI.csproj
+++ b/SolvitaireGUI/SolvitaireGUI.csproj
@@ -141,4 +141,10 @@
     <Resource Include="Resources\Icons\snap.png" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Views\GameDisplay\TicTacToeBoardView.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+  </ItemGroup>
+
 </Project>
