--- a/SolvitaireGUI/SolvitaireGUI.csproj
+++ b/SolvitaireGUI/SolvitaireGUI.csproj
@@ -145,6 +145,9 @@
     <Compile Update="Views\GameDisplay\TicTacToeBoardView.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="Views\OnePlayerPlayingView.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
 
 </Project>
